charts/auditbeat.yaml
---
# Source: auditbeat/templates/secret.yaml
apiVersion: v1
kind: Secret
metadata:
  name: good-worm-auditbeat
  labels:
    app: auditbeat
    chart: auditbeat-1.1.0
    release: good-worm
    heritage: Tiller
type: Opaque
data:
  auditbeat.yml: ICAgIGF1ZGl0YmVhdC5tb2R1bGVzOgogICAgLSBhdWRpdF9ydWxlczogfAogICAgICAgICMgVGhpbmdzIHRoYXQgYWZmZWN0IGlkZW50aXR5LgogICAgICAgIC13IC9ldGMvZ3JvdXAgLXAgd2EgLWsgaWRlbnRpdHkKICAgICAgICAtdyAvZXRjL3Bhc3N3ZCAtcCB3YSAtayBpZGVudGl0eQogICAgICAgIC13IC9ldGMvZ3NoYWRvdyAtcCB3YSAtayBpZGVudGl0eQogICAgICAgIC13IC9ldGMvc2hhZG93IC1wIHdhIC1rIGlkZW50aXR5CiAgICAgICAgIyBVbmF1dGhvcml6ZWQgYWNjZXNzIGF0dGVtcHRzIHRvIGZpbGVzICh1bnN1Y2Nlc3NmdWwpLgogICAgICAgIC1hIGFsd2F5cyxleGl0IC1GIGFyY2g9YjMyIC1TIG9wZW4sY3JlYXQsdHJ [...]
---
# Source: auditbeat/templates/serviceaccount.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: good-worm-auditbeat
  labels:
    app: auditbeat
    chart: auditbeat-1.1.0
    release: good-worm
    heritage: Tiller
---
# Source: auditbeat/templates/clusterrole.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: good-worm-auditbeat
  labels:
    app: auditbeat
    chart: auditbeat-1.1.0
    release: good-worm
    heritage: Tiller
rules:
- apiGroups: [""]
  resources:
  - namespaces
  - pods
  verbs: ["get", "list", "watch"]
---
# Source: auditbeat/templates/clusterrolebinding.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: good-worm-auditbeat
  labels:
    app: auditbeat
    chart: auditbeat-1.1.0
    release: good-worm
    heritage: Tiller
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: good-worm-auditbeat
subjects:
- kind: ServiceAccount
  name: good-worm-auditbeat
  namespace: default
---
# Source: auditbeat/templates/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: good-worm-auditbeat
  labels:
    app: auditbeat
    chart: auditbeat-1.1.0
    release: good-worm
    heritage: Tiller
spec:
  selector:
    matchLabels:
      app: auditbeat
      release: good-worm
  minReadySeconds: 10
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: auditbeat
        release: good-worm
      annotations:
        checksum/secret: 44bfe02e2045c0356cec927709493430e93f875a4628470611989d427349529d
    spec:
      hostPID: true
      containers:
      - name: auditbeat
        image: "docker.elastic.co/beats/auditbeat:6.7.0"
        imagePullPolicy: IfNotPresent
        args:
        - "-e"
        env:
        - name: POD_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: NODE_NAME
          valueFrom:
            fieldRef:
              fieldPath: spec.nodeName
        securityContext:
          runAsUser: 0
          # `hostPID: true`, along with the AUDIT_CONTROL and AUDIT_READ capabilities are required.
          # Otherwise you'll see a startup error like:
          #   2018-06-13T03:23:30.026ZERRORinstance/beat.go:667Exiting: 1 error: 1 error: failed to create audit client: failed to get audit status: operation not permitted
          #   Exiting: 1 error: 1 error: failed to create audit client: failed to get audit status: operation not permitted
          #
          # See https://github.com/elastic/beats-docker/issues/25 for more info
          capabilities:
            add: ["AUDIT_CONTROL", "AUDIT_READ"]
        resources:
          {}

        volumeMounts:
        - name: auditbeat-config
          mountPath: /usr/share/auditbeat/auditbeat.yml
          readOnly: true
          subPath: auditbeat.yml
        - name: data
          mountPath: /usr/share/auditbeat/data
      volumes:
      - name: auditbeat-config
        secret:
          secretName: good-worm-auditbeat
      - name: data
        hostPath:
          path: /var/lib/auditbeat
          type: DirectoryOrCreate
      terminationGracePeriodSeconds: 60
      serviceAccountName: good-worm-auditbeat
