charts/elasticsearch-exporter.yaml
---
# Source: elasticsearch-exporter/templates/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: plundering-kiwi-elasticsearch-exporter
  labels:
    chart: elasticsearch-exporter-1.3.1
    app: elasticsearch-exporter
    release: "plundering-kiwi"
    heritage: "Tiller"
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 9108
      protocol: TCP
  selector:
    app: elasticsearch-exporter
    release: "plundering-kiwi"
---
# Source: elasticsearch-exporter/templates/deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: plundering-kiwi-elasticsearch-exporter
  labels:
    chart: elasticsearch-exporter-1.3.1
    app: elasticsearch-exporter
    release: "plundering-kiwi"
    heritage: "Tiller"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch-exporter
      release: "plundering-kiwi"
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: elasticsearch-exporter
        release: "plundering-kiwi"
    spec:
      restartPolicy: Always
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - name: elasticsearch-exporter
          image: "justwatch/elasticsearch_exporter:1.0.2"
          imagePullPolicy: IfNotPresent
          command: ["elasticsearch_exporter",
                    "-es.uri=localhost:9200",
                    "-es.all=true",
                    "-es.indices=true",
                    "-es.timeout=30s",
                    "-web.listen-address=:9108",
                    "-web.telemetry-path=/metrics"]
          securityContext:
            capabilities:
              drop:
                - SETPCAP
                - MKNOD
                - AUDIT_WRITE
                - CHOWN
                - NET_RAW
                - DAC_OVERRIDE
                - FOWNER
                - FSETID
                - KILL
                - SETGID
                - SETUID
                - NET_BIND_SERVICE
                - SYS_CHROOT
                - SETFCAP
            readOnlyRootFilesystem: true
          resources:
            {}

          ports:
            - containerPort: 9108
              name: http
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 30
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            timeoutSeconds: 10
          volumeMounts:
      volumes:
