charts/etcd-operator.yaml
---
# Source: etcd-operator/templates/backup-operator-service-account.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: ugly-wolf-etcd-operator-etcd-backup-operator
  labels:
    chart: "etcd-operator-0.8.3"
    app: etcd-backup-operator
    heritage: Tiller
    release: ugly-wolf
---
# Source: etcd-operator/templates/operator-service-account.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: ugly-wolf-etcd-operator-etcd-operator
  labels:
    chart: "etcd-operator-0.8.3"
    app: etcd-operator
    heritage: Tiller
    release: ugly-wolf
---
# Source: etcd-operator/templates/restore-operator-service-account.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: ugly-wolf-etcd-operator-etcd-restore-operator
  labels:
    chart: "etcd-operator-0.8.3"
    app: etcd-restore-operator
    heritage: Tiller
    release: ugly-wolf
---
# Source: etcd-operator/templates/operator-cluster-role.yaml
apiVersion: rbac.authorization.k8s.io/v1beta1
kind: ClusterRole
metadata:
  name: ugly-wolf-etcd-operator-etcd-operator
  labels:
    chart: "etcd-operator-0.8.3"
    app: etcd-operator
    heritage: Tiller
    release: ugly-wolf
rules:
- apiGroups:
  - etcd.database.coreos.com
  resources:
  - etcdclusters
  - etcdbackups
  - etcdrestores
  verbs:
  - "*"
- apiGroups:
  - apiextensions.k8s.io
  resources:
  - customresourcedefinitions
  verbs:
  - "*"
- apiGroups:
  - ""
  resources:
  - pods
  - services
  - endpoints
  - persistentvolumeclaims
  - events
  verbs:
  - "*"
- apiGroups:
  - apps
  resources:
  - deployments
  verbs:
  - "*"
- apiGroups:
  - ""
  resources:
  - secrets
  verbs:
  - get
---
# Source: etcd-operator/templates/backup-operator-clusterrole-binding.yaml
kind: ClusterRoleBinding
apiVersion: rbac.authorization.k8s.io/v1beta1
metadata:
  name: ugly-wolf-etcd-operator-etcd-backup-operator
  labels:
    chart: "etcd-operator-0.8.3"
    app: etcd-operator
    heritage: Tiller
    release: ugly-wolf
subjects:
- kind: ServiceAccount
  name: ugly-wolf-etcd-operator-etcd-backup-operator
  namespace: default
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: ugly-wolf-etcd-operator-etcd-operator
---
# Source: etcd-operator/templates/operator-clusterrole-binding.yaml
kind: ClusterRoleBinding
apiVersion: rbac.authorization.k8s.io/v1beta1
metadata:
  name: ugly-wolf-etcd-operator-etcd-operator
  labels:
    chart: "etcd-operator-0.8.3"
    app: etcd-operator
    heritage: Tiller
    release: ugly-wolf
subjects:
- kind: ServiceAccount
  name: ugly-wolf-etcd-operator-etcd-operator
  namespace: default
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: ugly-wolf-etcd-operator-etcd-operator
---
# Source: etcd-operator/templates/restore-operator-clusterrole-binding.yaml
kind: ClusterRoleBinding
apiVersion: rbac.authorization.k8s.io/v1beta1
metadata:
  name: ugly-wolf-etcd-operator-etcd-restore-operator
  labels:
    chart: "etcd-operator-0.8.3"
    app: etcd-restore-operator
    heritage: Tiller
    release: ugly-wolf
subjects:
- kind: ServiceAccount
  name: ugly-wolf-etcd-operator-etcd-restore-operator
  namespace: default
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: ugly-wolf-etcd-operator-etcd-operator
---
# Source: etcd-operator/templates/restore-operator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: etcd-restore-operator
  labels:
    chart: "etcd-operator-0.8.3"
    app: etcd-restore-operator
    heritage: Tiller
    release: ugly-wolf
spec:
  ports:
  - protocol: TCP
    name: http-etcd-restore-port
    port: 19999
  selector:
    app: etcd-restore-operator
    release: ugly-wolf
---
# Source: etcd-operator/templates/backup-operator-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: ugly-wolf-etcd-operator-etcd-backup-operator
  labels:
    chart: "etcd-operator-0.8.3"
    app: etcd-backup-operator
    heritage: Tiller
    release: ugly-wolf
spec:
  selector:
    matchLabels:
      app: ugly-wolf-etcd-operator-etcd-backup-operator
      release: ugly-wolf
  replicas: 1
  template:
    metadata:
      name: ugly-wolf-etcd-operator-etcd-backup-operator
      labels:
        app: ugly-wolf-etcd-operator-etcd-backup-operator
        release: ugly-wolf
    spec:
      serviceAccountName: ugly-wolf-etcd-operator-etcd-backup-operator
      containers:
      - name: etcd-backup-operator
        image: "quay.io/coreos/etcd-operator:v0.9.3"
        imagePullPolicy: Always
        command:
        - etcd-backup-operator
        env:
        - name: MY_POD_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: MY_POD_NAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 128Mi
---
# Source: etcd-operator/templates/operator-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: ugly-wolf-etcd-operator-etcd-operator
  labels:
    chart: "etcd-operator-0.8.3"
    app: etcd-operator
    heritage: Tiller
    release: ugly-wolf
spec:
  selector:
    matchLabels:
      app: ugly-wolf-etcd-operator-etcd-operator
      release: ugly-wolf
  replicas: 1
  template:
    metadata:
      name: ugly-wolf-etcd-operator-etcd-operator
      labels:
        app: ugly-wolf-etcd-operator-etcd-operator
        release: ugly-wolf
    spec:
      serviceAccountName: ugly-wolf-etcd-operator-etcd-operator
      containers:
      - name: ugly-wolf-etcd-operator-etcd-operator
        image: "quay.io/coreos/etcd-operator:v0.9.3"
        imagePullPolicy: Always
        command:
        - etcd-operator
        env:
        - name: MY_POD_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: MY_POD_NAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 128Mi
---
# Source: etcd-operator/templates/restore-operator-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: ugly-wolf-etcd-operator-etcd-restore-operator
  labels:
    chart: "etcd-operator-0.8.3"
    app: etcd-restore-operator
    heritage: Tiller
    release: ugly-wolf
spec:
  selector:
    matchLabels:
      app: etcd-restore-operator
      release: ugly-wolf
  replicas: 1
  template:
    metadata:
      name: ugly-wolf-etcd-operator-etcd-restore-operator
      labels:
        app: etcd-restore-operator
        release: ugly-wolf
    spec:
      serviceAccountName: ugly-wolf-etcd-operator-etcd-restore-operator
      containers:
      - name: etcd-restore-operator
        image: "quay.io/coreos/etcd-operator:v0.9.3"
        imagePullPolicy: Always
        ports:
        - containerPort: 19999
        command:
        - etcd-restore-operator
        env:
        - name: MY_POD_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: MY_POD_NAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        - name: SERVICE_ADDR
          value: "etcd-restore-operator:19999"
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 128Mi
