charts/filebeat.yaml
---
# Source: filebeat/templates/serviceaccount.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: dozing-beetle-filebeat
  labels:
    app: filebeat
    chart: filebeat-1.7.0
    release: dozing-beetle
    heritage: Tiller
---
# Source: filebeat/templates/clusterrole.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: dozing-beetle-filebeat
  labels:
    app: filebeat
    chart: filebeat-1.7.0
    release: dozing-beetle
    heritage: Tiller
rules:
- apiGroups: [""]
  resources:
  - namespaces
  - pods
  verbs: ["get", "list", "watch"]
---
# Source: filebeat/templates/clusterrolebinding.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: dozing-beetle-filebeat
  labels:
    app: filebeat
    chart: filebeat-1.7.0
    release: dozing-beetle
    heritage: Tiller
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: dozing-beetle-filebeat
subjects:
- kind: ServiceAccount
  name: dozing-beetle-filebeat
  namespace: default
---
# Source: filebeat/templates/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: dozing-beetle-filebeat-metrics
  namespace: default
  labels:
    app: filebeat
    chart: filebeat-1.7.0
    release: dozing-beetle
    heritage: Tiller
spec:
  selector:
    app: filebeat
  ports:
    - name: metrics
      port: 9479
      targetPort: 9479
      protocol: TCP
---
# Source: filebeat/templates/daemonset.yaml
apiVersion: apps/v1beta2
kind: DaemonSet
metadata:
  name: dozing-beetle-filebeat
  labels:
    app: filebeat
    chart: filebeat-1.7.0
    release: dozing-beetle
    heritage: Tiller
spec:
  selector:
    matchLabels:
      app: filebeat
      release: dozing-beetle
  minReadySeconds: 10
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: filebeat
        release: dozing-beetle
      annotations:
        checksum/secret: a44746447b5f5aff68161c23184a01e31577ae4a9c508b245307b74a271771a5
    spec:
      initContainers:
      containers:
      - name: filebeat
        image: "docker.elastic.co/beats/filebeat-oss:6.7.0"
        imagePullPolicy: IfNotPresent
        args:
        - "-e"
        env:
        - name: POD_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: NODE_NAME
          valueFrom:
            fieldRef:
              fieldPath: spec.nodeName
        ports:
          - containerPort: 5066
        securityContext:
          runAsUser: 0
        volumeMounts:
        - name: filebeat-config
          mountPath: /usr/share/filebeat/filebeat.yml
          readOnly: true
          subPath: filebeat.yml
        - name: data
          mountPath: /usr/share/filebeat/data
        - name: varlog
          mountPath: /var/log
          readOnly: true
        - name: varlibdockercontainers
          mountPath: /var/lib/docker/containers
          readOnly: true
      - name: dozing-beetle-filebeat-prometheus-exporter
        image: "trustpilot/beat-exporter:0.1.1"
        imagePullPolicy: IfNotPresent
        args:
        ports:
          - containerPort: 9479
      volumes:
      - name: varlog
        hostPath:
          path: /var/log
      - name: varlibdockercontainers
        hostPath:
          path: /var/lib/docker/containers
      - name: filebeat-config
        secret:
          secretName: dozing-beetle-filebeat
      - name: data
        hostPath:
          path: /var/lib/filebeat
          type: DirectoryOrCreate
      terminationGracePeriodSeconds: 60
      serviceAccountName: dozing-beetle-filebeat
