charts/g2.yaml
---
# Source: g2/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: steely-peahen-g2
  labels:
    app: "g2"
    chart: "g2-0.3.3"
    release: "steely-peahen"
    heritage: "Tiller"
spec:
  ports:
  - name: http
    port: 4730
    protocol: TCP
    targetPort: http
  - name: restapi
    port: 3000
    protocol: TCP
    targetPort: restapi
  selector:
    app: "g2"
    release: "steely-peahen"
  type: 'ClusterIP'
---
# Source: g2/templates/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: steely-peahen-g2
  labels:
    chart: "g2-0.3.3"
    app: "g2"
    heritage: "Tiller"
    release: "steely-peahen"
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: "g2"
        release: "steely-peahen"
    spec:
      containers:
      - args:
        - run
        - --storage-dir=/var/db
        - --v=5
        image: 'appscode/gearmand:0.5.0'
        imagePullPolicy: 'IfNotPresent'
        name: gearman-server
        ports:
        - containerPort: 4730
          name: http
          protocol: TCP
        - containerPort: 3000
          name: restapi
          protocol: TCP
        volumeMounts:
        - mountPath: /var/db
          name: data-volume
      volumes:
      - emptyDir: {}
        name: data-volume
